karnc/tests/fixtures/negative/97_http_get_with_body/src/svc.karn
context svc

type Payload = {
  name: String,
}

service api {
  on http GET "/items" (body: Payload) -> Effect[HttpResult[String]] {
    Ok("hello")
  }
}
